fix alignment of mixpanel logo

--- a/server/static/sass/index_page.scss
+++ b/server/static/sass/index_page.scss
@@ -153,8 +153,8 @@ footer {
     // no position:relative on the footer
     .mixpanel-logo {
       position: absolute;
-      top: 40px;
-      right: 10px;
+      top: 25px;
+      right: 40px;
       opacity: 0.4;
     }
   }
